Fix the menu issue on mobile devices

--- a/_sass/_slick-nav.scss
+++ b/_sass/_slick-nav.scss
@@ -2,6 +2,7 @@
 
 // slick-nav
 .mobile_menu{
+    z-index: 20;
     @media #{$mobile_device} {
         position: absolute;
         right: 0px;
@@ -73,7 +74,7 @@
     float: right;
     font-size: 22px;
     position: relative;
-    top: -9px;  
+    top: -9px;
 }
 .slicknav_btn {
 	background-color: transparent;
